recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:18: error: not enough arguments for method spiral: (steps: Int, angle: Int, length: Int, increment: Int)Unit.
Unspecified value parameters steps, angle, length, ...
		spiral()
                      ^